# openwhisprz

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  TROUBLESHOOTING.md  electron-builder.json  main.js  package-lock.json  package.json  preload.js
.github/workflows/: build-and-notarize.yml  build-meeting-aec-helper.yml  codeql.yml  release.yml
native/meeting-aec-helper/: CMakeLists.txt
native/meeting-aec-helper/src/: aec_processor.cc  aec_processor.h  main.cc  null_aec_dump_factory.cc
resources/: linux-system-audio-helper.c  macos-audio-tap.swift  macos-mic-listener.swift  windows-fast-paste.c
resources/nsis/: cleanup-models.nsh
scripts/: afterPack.js  build-linux-system-audio.js  build-macos-audio-tap.js  build-meeting-aec-helper.js  check-i18n.js  download-diarization-models.js  download-meeting-aec-helper.js  download-minilm.js  download-qdrant.js  download-sherpa-onnx.js  meeting-diarization-eval.js  run-electron.js
scripts/lib/: download-utils.js  meeting-aec-build.js
src/: App.jsx  AppRouter.jsx  index.css  index.html  main.jsx  updater.js
src/assets/: icon.icns
src/components/: AgentOverlay.tsx  AuthenticationStep.tsx  CommandSearch.tsx  ControlPanel.tsx  ControlPanelSidebar.tsx  DeveloperSection.tsx  EmailVerificationStep.tsx  HistoryView.tsx  IntegrationsView.tsx  LocalModelPicker.tsx  LocalWhisperPicker.tsx  MeetingNotificationOverlay.tsx  NoteEditor.tsx  OnboardingFlow.tsx  ReasoningModelSelector.tsx  ReferralDashboard.tsx  SelfHostedPanel.tsx  SettingsModal.tsx  SettingsPage.tsx  TranscriptionModelPicker.tsx  UsageDisplay.tsx  (+3 more)
(+158 files in other folders)
